# mlop_zoomcamp_learning

./: .gitignore  README.md  test.ipynb
2-exp-tracking/: homework_2.ipynb  mlflow.db  pyproject.toml
2-exp-tracking/artifacts/3/0877a7e34d104bfab45af76c3391ca6c/artifacts/models/: MLmodel
2-exp-tracking/artifacts/3/1fa49a0f24514d8ab5d1ec6a180ccfe5/artifacts/models/metadata/: MLmodel
2-exp-tracking/artifacts/3/3a6aa6475be945288910f5ea49bd516e/artifacts/models/metadata/: MLmodel
2-exp-tracking/artifacts/3/630b7db1eba2494099fd38c96aef4417/artifacts/models/: MLmodel
2-exp-tracking/artifacts/3/6467f848b0c64df2aa0d895eeb6a44a4/artifacts/models_mlflow/metadata/: MLmodel
2-exp-tracking/artifacts/3/6a6d9ee7a181461eba52fb31743eee02/artifacts/model/: MLmodel
2-exp-tracking/artifacts/3/847a00a8fc994c448adfe3cb83b601fe/artifacts/models/metadata/: MLmodel
2-exp-tracking/artifacts/3/90a6cb82264e4a7ab4d91bb5ff33e470/artifacts/models/: MLmodel
2-exp-tracking/artifacts/3/a1b69458efa14b5f970441b5251d45c8/artifacts/models/: MLmodel
2-exp-tracking/artifacts/3/c763fead5dd9455f9ada442b25ac2f22/artifacts/models_mlflow/: MLmodel
2-exp-tracking/artifacts/3/cc70b2b94ee648b3830e48f40f45057c/artifacts/models/metadata/: MLmodel
2-exp-tracking/artifacts/3/d6adac26bf7b4a788eb1b21c94ea56d2/artifacts/models/: MLmodel
2-exp-tracking/artifacts/3/f1fd860d46054a2286f3dabaf983aa4a/artifacts/models_mlflow/: MLmodel
2-exp-tracking/artifacts/3/fd3c5a35c919488bac19e9042488043d/artifacts/models/: MLmodel
2-exp-tracking/mlruns/1/1c7baee02778480a9535677c2532a3d6/artifacts/model/: MLmodel
(+25 files in other folders)
